data validation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Amit\\\\Notebooks\\\\Alianz_Assignment\\\\E2E_Term_Scheme'"
+       "'c:\\\\Users\\\\Amit\\\\Notebooks\\\\Alianz_Assignment\\\\E2E_Term_Scheme\\\\research'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# SRC/CONFIG -> to take the configurations and take actions according to the configs \n",
-    "class CongigurationManager:\n",
+    "class ConfigurationManager:\n",
     "    def __init__(\n",
     "            self,\n",
     "            config_filepath = CONFIG_FILE_PATH,\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,23 +151,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-20 15:10:07,971: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-20 15:10:07,977: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-20 15:10:07,980: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-05-20 15:10:07,981: INFO: common: created directory at: artifacts]\n",
-      "[2024-05-20 15:10:07,982: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-05-20 15:10:10,450: INFO: 236588655: artifacts/data_ingestion/data.zip download ! with the info:\n",
-      " Server: nginx/1.25.3\n",
-      "Date: Mon, 20 May 2024 09:40:09 GMT\n",
-      "Transfer-Encoding: chunked\n",
-      "Connection: close\n",
+      "[2024-05-20 17:39:07,681: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-20 17:39:07,681: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-20 17:39:07,686: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-05-20 17:39:07,688: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-20 17:39:07,688: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-05-20 17:39:08,693: INFO: 236588655: artifacts/data_ingestion/data.zip download ! with the info:\n",
+      " Connection: close\n",
+      "Content-Length: 357766\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"208fa42863452f47295cab4288ba323c6bdad4c9b561bdce2eed0187f47f134b\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: E6BA:14FBEE:19D74F:2377FD:664B3D64\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Mon, 20 May 2024 12:09:09 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-hyd1100034-HYD\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1716206949.282461,VS0,VE282\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 4d3b870894ec4a11ad74a85ee9b9d57272bf4d44\n",
+      "Expires: Mon, 20 May 2024 12:14:09 GMT\n",
+      "Source-Age: 0\n",
       "\n",
       "]\n"
      ]
@@ -175,7 +195,7 @@
    ],
    "source": [
     "try:\n",
-    "    config = CongigurationManager()\n",
+    "    config = ConfigurationManager()\n",
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
     "    data_ingestion = Dataingestion(config=data_ingestion_config)\n",
     "    data_ingestion.download_file()\n",
